welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: value update is not a member of java.awt.Color
  getCouleurSol() =  supercase
  ^