welcome.lessons.welcome.methods.slug.SlugTracking.scala.code

def isFacingTrail():Boolean = {
    // Write your code here
 	def supercase : Color = Color.pink;
  if (estFaceMur())
  {return false}
  avance();
  getCouleurSol() =  supercase
  recule();
  if(supercase==Color.green)
  {return true}
  else 
  {return false}
}